add users functional
